--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,8 @@
 body {
   font-family: 'Commissioner', sans-serif;
-  font-weight: 500;
+  font-weight: medium;
   font-size: 16px;
+  background-color: hsla(0, 0%, 48%, 0.1);
 }
 
 .hero {
@@ -21,7 +22,7 @@ body {
 }
 
 .hero-title {
-  font-weight: 700;
+  font-weight: bold;
   font-size: large;
 }
 
@@ -29,5 +30,68 @@ body {
   width: 15px;
   height: 15px;
   background-image: url('./icons/icon-hamburger.svg');
-  background-size: 15px 15px;
+  background-repeat: no-repeat;
+}
+
+.header {
+  display: flex;
+  flex-direction: column;
+  justify-content: sp;
+  align-items: center;
+  text-align: center;
+  margin-left: 30px;
+  margin-right: 30px;
+  margin-top: -50px;
+  border-radius: 10px;
+  padding: 40px 20px;
+  background-color: white;
+}
+
+.project-logo {
+  width: 56px;
+  height: 56px;
+  background-image: url('./icons/logo-mastercraft.svg');
+  background-repeat: no-repeat;
+  margin-top: -69px;
+}
+
+.project-name {
+  font-weight: bold;
+  font-size: larger;
+  margin-top: 20px;
+  margin: 20px 40px;
+}
+
+.project-desc {
+  font-size: smaller;
+  color: hsla(0, 0%, 48%, 0.75);
+  margin-bottom: 20px;
+}
+
+.btn-container {
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+}
+
+.btn {
+  border: none;
+  font-family: inherit;
+}
+
+.primary-btn {
+  min-width: 200px;
+  float: left;
+  color: white;
+  border-radius: 50px;
+  padding: 0 25px;
+  background-color: hsl(176, 50%, 47%);
+}
+
+.bookmark-btn {
+  width: 56px;
+  height: 56px;
+  background-image: url('./icons/icon-bookmark.svg');
+  background-repeat: no-repeat;
+  background-color: inherit;
 }
