--- a/src/App.css
+++ b/src/App.css
@@ -33,18 +33,21 @@ body {
   background-repeat: no-repeat;
 }
 
-.header {
+section {
   display: flex;
   flex-direction: column;
-  justify-content: sp;
   align-items: center;
   text-align: center;
-  margin-left: 30px;
-  margin-right: 30px;
-  margin-top: -50px;
+  margin: 20px 30px 0px 30px;
   border-radius: 10px;
-  padding: 40px 20px;
+  padding: 20px 30px;
   background-color: white;
+}
+
+.header {
+  margin-top: -55px;
+  padding-top: 40px;
+  padding-bottom: 40px;
 }
 
 .project-logo {
@@ -59,7 +62,6 @@ body {
   font-weight: bold;
   font-size: larger;
   margin-top: 20px;
-  margin: 20px 40px;
 }
 
 .project-desc {
@@ -71,6 +73,7 @@ body {
 .btn-container {
   width: 100%;
   display: flex;
+  flex-wrap: wrap;
   justify-content: space-between;
 }
 
@@ -80,7 +83,8 @@ body {
 }
 
 .primary-btn {
-  min-width: 200px;
+  max-width: 200px;
+  flex-grow: 2;
   float: left;
   color: white;
   border-radius: 50px;
@@ -89,9 +93,45 @@ body {
 }
 
 .bookmark-btn {
-  width: 56px;
-  height: 56px;
+  width: 50px;
+  height: 50px;
+  margin-left: 10px;
+  background-size: 50px, 50px;
   background-image: url('./icons/icon-bookmark.svg');
   background-repeat: no-repeat;
   background-color: inherit;
+}
+
+.project-stats {
+  justify-content: space-between;
+}
+
+.stat-tracker {
+  margin-bottom: 10px;
+}
+
+.stat-tracker > .value {
+  font-size: x-large;
+  font-weight: bold;
+  margin-bottom: 10px;
+}
+
+.stat-tracker > .description {
+  font-size: smaller;
+  color: hsl(0, 0%, 48%, 0.75);
+}
+
+.separator {
+  margin: 10px 0px 20px 0px;
+  width: 70px;
+  height: 0;
+  border: 1px solid hsl(0, 0%, 48%, 0.2);
+}
+
+@media only screen and (min-width: 768px) {
+  .separator {
+    margin: 0 20px;
+    width: 0;
+    height: 70px;
+  }
 }
