--- a/src/App.css
+++ b/src/App.css
@@ -47,7 +47,7 @@ section {
 .header {
   margin-top: -55px;
   padding-top: 40px;
-  padding-bottom: 40px;
+  padding-bottom: 30px;
 }
 
 .project-logo {
@@ -126,6 +126,19 @@ section {
   width: 70px;
   height: 0;
   border: 1px solid hsl(0, 0%, 48%, 0.2);
+}
+
+.progress-bar {
+  width: 100%;
+  height: 10px;
+  border-radius: 5px;
+  background-color: hsl(0, 0%, 48%, 0.1);
+}
+
+.progress-bar > .progress {
+  height: 100%;
+  background-color: hsl(176, 50%, 47%);
+  border-radius: 5px;
 }
 
 @media only screen and (min-width: 768px) {
