--- a/src/App.css
+++ b/src/App.css
@@ -48,6 +48,7 @@ section {
   flex-direction: column;
   align-items: center;
   text-align: center;
+  width: 275px;
   margin: 25px 25px 0px 25px;
   border-radius: 5px;
   padding: 30px 25px;
@@ -84,21 +85,27 @@ section {
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
+  align-items: center;
 }
 
 .btn {
-  border: none;
+  height: 50px;
   font-family: inherit;
-}
-
-.primary-btn {
-  max-width: 210px;
-  flex-grow: 2;
-  float: left;
   color: white;
+  border: none;
   border-radius: 50px;
   padding: 0 25px;
+}
+
+.btn-primary {
+  max-width: 200px;
+  flex-grow: 2;
+  float: left;
   background-color: hsl(176, 50%, 47%);
+}
+
+.btn-secondary {
+  background-color: grey
 }
 
 .bookmark-btn {
@@ -174,8 +181,26 @@ section {
 }
 
 .reward .remaining {
+  margin-top: 20px;
+}
+
+.reward .remaining .value {
   font-weight: bold;
   font-size: xx-large;
+}
+
+.reward .remaining .description {
+  font-weight: bold;
+  margin-left: 5px;
+}
+
+article.disabled {
+  opacity: 50%;
+}
+
+article .btn {
+  height: 40px;
+  margin-top: 20px;
 }
 
 @media only screen and (min-width: 768px) {
